add message route
add message route that can fetch old messages
